[*] AssetModalWithoutPin.module.scss ( corrected styles from tbody) [*] AssetRowWithoutPin.tsx (add styles from sharedByDefault assets) [*] checkbox.scss (corrected styles from &__desc) [*] edit-org-user.module.scss (corrected styles) [*] edit-organizationUser-without-assets.tsx (change Loader to SaveResetHeader) [*] modal-assets.tsx (add closing modal window after succes request ) [*] my-account-modal.module.scss (change .footer to .headlineWrap) [*] MyAccountModal.tsx (change Loader to SaveResetHeader) [+] user-account-detail.module.scss (add .emailField) [+] ViewUserAccountPage.tsx (add .emailField class from email )

--- a/src/components/app-checkbox/style/checkbox.scss
+++ b/src/components/app-checkbox/style/checkbox.scss
@@ -104,9 +104,9 @@
 		position: absolute;
 		background-image: linear-gradient(88.76deg, rgba(113, 130, 166, 0.85) 2.12%, rgba(85, 98, 126, 0.95) 97.88%);
 
-		left: -65px;
-		//bottom: calc(100% + 8px);
-		bottom: -7px;
+		left: 0;
+		bottom: calc(100% + 8px);
+
 		transform: translateX(-50%);
 		color: white;
 		border-radius: 2px;
