--- a/src/components/edit-org-user/UserAccountDetailPage/style/AssetModalWithoutPin.module.scss
+++ b/src/components/edit-org-user/UserAccountDetailPage/style/AssetModalWithoutPin.module.scss
@@ -29,7 +29,7 @@
 
 	tbody {
 		display: block;
-		overflow: auto;
+		overflow: overlay;
 		height: 100%;
 		scrollbar-width: thin;
 	}
@@ -83,6 +83,7 @@
 	font-size: 14px;
 	line-height: 1.36;
 
+
 	&:nth-child(odd) {
 		background-color: rgba($inactive, 0.1);
 	}
@@ -91,10 +92,40 @@
 		color: $accent;
 	}
 
+	&--defaultAsset {
+		color: #003C71;
+
+		//&:first-child {
+		//	.check-block__check:hover ~ &__desc {
+		//		opacity: 0;
+		//	}
+		//}
+
+		&:first-child {
+			opacity: 1;
+			bottom: -60px;
+			.action{
+				label {
+					span{
+						bottom: -30px;
+					}
+					svg:hover ~ span{
+						bottom: -30px;
+					}
+				}
+			}
+
+
+		}
+	}
+
+
 	&:first-child :global {
 		.pin-button::after {
 			top: calc(100% + 5px);
 			bottom: auto;
 		}
 	}
+
 }
+
