--- a/src/components/edit-org-user/UserAccountDetailPage/style/user-account-detail.module.scss
+++ b/src/components/edit-org-user/UserAccountDetailPage/style/user-account-detail.module.scss
@@ -89,6 +89,10 @@
 	color: #003C71;
 	text-decoration: none;
 
+.emailField{
+	&:hover{
+		color: $accent;
+	}
 }
 
 .item:last-child {
