--- a/src/components/edit-org-user/edit-org-user.module.scss
+++ b/src/components/edit-org-user/edit-org-user.module.scss
@@ -8,7 +8,7 @@
 }
 
 .title {
-	margin: 0 0 16px;
+	//margin: 0 0 16px;
 }
 
 .warning {
@@ -35,4 +35,28 @@
 	align-items: center;
 	justify-content: end;
 	gap: 32px;
+}
+
+.headlineWrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	.orgTitle{
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		h1 {
+			//margin-top: 16px;
+		}
+	}
+	&__buttons {
+		display: grid;
+		grid-template-columns: auto 100px;
+		align-items: center;
+		gap: 32px;
+
+		//.cta:nth-child(1) {
+		//	margin-right: 24px;
+		//}
+	}
 }
